--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul class="navbar-nav mb-lg-0 ms-auto">
                         <li class="nav-item">
                             <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold" aria-current="page"
-                                href="#home">Home</a>
+                                href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold"
@@ -53,11 +53,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold"
-                                href="#product">Products</a>
+                                href="index.html">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold"
-                                href="#contact">Contact</a>
+                                href="index.html">Contact</a>
                         </li>
 
 
