--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-lg-0 ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold" aria-current="page"
+                            <a class="nav-link text-uppercase fs-6 mx-2 fw-bold green" aria-current="page"
                                 href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold"
+                            <a class="nav-link green text-uppercase fs-6 mx-2 fw-bold"
                                 href="index.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold"
+                            <a class="nav-link green text-uppercase fs-6 mx-2 fw-bold"
                                 href="index.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-warning text-uppercase fs-6 mx-2 fw-bold"
+                            <a class="nav-link green text-uppercase fs-6 mx-2 fw-bold"
                                 href="index.html">Contact</a>
                         </li>
 
@@ -73,24 +73,12 @@
 
     <section class="bg_home container-fluid position-relative" id="home">
 
-        <div class="row home-banner">
-            <div class="col-6 mt-5 p-5 col-md-4">
-                <h1 class="text-big color-yellow">We Are Providing</h1>
-                <h1 class="text-big color-light">Quality Supplement Products</h1>
-            </div>
-           
+        
         </div>
 
 
     </section>
 
-    <section class="info ">
-      <div class=" home-text">
-        <p class="text-white text-at-home fw-bold">Discover Uncompromising Quality: Elevate Your Wellness Journey with Our
-            Premium, Science-Backed Supplement Range</p>
-        <p class="text-white text-at-home"> – Your Path to a Healthier, Vibrant Life Starts Here.</p>
-    </div>
-    </section>
 
 
 
@@ -391,7 +379,7 @@
         <hr>
         <p class="text-black fs-6 center">
           Copyright &copy;2023 All rights reserved by GNC | This template is made by
-          <a href="https://www.linkedin.com/in/sheraz-hassan-57bba026a" class="green">Sheraz Hassan</a>
+          <a href="https://www.linkedin.com/in/sheraz-hassan-57bba026a" class="text-white">Sheraz Hassan</a>
         </p>
       </footer>
   
