--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- nav -->
 
 
-    <div class="border-bottom position-static">
-        <nav class="navbar navbar-expand-lg container" data-bs-theme="dark">
+    <div class="border-bottom position-static bg-black">
+        <nav class="navbar navbar-expand-lg container " data-bs-theme="dark">
             <div class="container-fluid mt-1">
                 <a class="navbar-brand" href="#"><img src="imgs/logo.png" alt="" height="50px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
