--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div
           class="contacting-info-containers contacting-info-containers-explore"
         >
-          <h1 class="heading-contacting-info secondary">Explore</h1>
+          <h1 class="heading-contacting-info secondary text-white">Explore</h1>
           <div class="lines">
             <a href="#home" class="link text-black fs-6 "
               ><i class="fa-solid fa-arrow-right green"></i> About Us</a
@@ -288,7 +288,7 @@
         <div
           class="contacting-info-containers contacting-info-containers-recent-posts"
         >
-          <h1 class="heading-contacting-info secondary">Featured Products</h1>
+          <h1 class="heading-contacting-info secondary text-white">Featured Products</h1>
           <div class="lines lines-r">
             <div class="lines-img pic1"></div>
             <div class="lines-des">
@@ -326,7 +326,7 @@
         <div
           class="contacting-info-containers contacting-info-containers-questions"
         >
-          <h1 class="heading-contacting-info secondary">Have a Queston?</h1>
+          <h1 class="heading-contacting-info secondary text-white">Have a Queston?</h1>
           <div class="lines">
             <span
               class="fa-solid fa-location-dot green"
